# visualRecognitionAddIn_Cursor

./: .gitignore  CMakeLists.txt  CMakePresets.json  MANIFEST.xml  README.md
cmake/: AcquirePDFium.cmake
scripts/: Build-And-Pack.ps1  build-linux.sh  docker-build-linux.ps1  docker-warm-build-images.ps1
src/: AnthropicMessagesClient.cpp  AnthropicMessagesClient.h  BoostJsonSingle.cpp  Component.cpp  Component.h  GeminiPdfClient.cpp  GeminiPdfClient.h  InvoiceTextParser.cpp  InvoiceTextParser.h  PdfTextExtractor.cpp  PdfTextExtractor.h  VisualAddIn.cpp  VisualAddIn.h  exports.cpp  pdfium_delayload.cpp
